Fix Alert Dialog title overlap on small screens

--- a/packages/@adobe/spectrum-css-temp/components/dialog/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/dialog/index.css
@@ -88,7 +88,7 @@ governing permissions and limitations under the License.
 
 .spectrum-Dialog .spectrum-Dialog-grid {
   display: grid;
-  grid-template-columns: var(--spectrum-dialog-padding) auto 1fr auto minmax(0, auto) var(--spectrum-dialog-padding);
+  grid-template-columns: var(--spectrum-dialog-padding) auto 1fr auto auto var(--spectrum-dialog-padding);
   grid-template-rows: auto var(--spectrum-dialog-padding) auto auto 1fr auto var(--spectrum-dialog-padding);
   grid-template-areas:
     "hero hero    hero    hero        hero        hero"
@@ -326,6 +326,13 @@ governing permissions and limitations under the License.
 
   .spectrum-Dialog .spectrum-Dialog-header {
     justify-content: flex-start;
+  }
+
+
+  .spectrum-Dialog-heading {
+    &.spectrum-Dialog-heading--noHeader {
+      grid-area: heading-start / heading-start / heading-end / heading-end;
+    }
   }
 
   .spectrum-Dialog--fullscreen,
